# secrag

./: .gitignore  README.md  pyproject.toml  refactor.md  refactor_dp.md
examples/: benchmark_data_quickstart.py  grpc_quickstart.py  perf_large_corpus.py  protocol_walkthrough.py  quickstart.py
refactors/: refactor3.md
securerag/: __init__.py  agent.py  backend_client.py  budget.py  builtin_mechanisms.py  builtin_schemes.py  config.py  context.py  corpus.py  cost.py  dp_mechanism.py  errors.py  grpc_server.py  llm.py  local_index.py  mechanism.py  models.py  protocol.py  retriever.py  retrievers.py  rust_backend.py  scheme_plugin.py  sim_server.py  sse.py
securerag-rs/: Cargo.toml  build.rs
securerag-rs/proto/: secure_retrieval.proto
securerag-rs/src/: builders.rs  builtin_schemes.rs  core.rs  dp.rs  encrypted_scheme.rs  engines.rs  lib.rs  protocol.rs  pyo3_bridge.rs  types.rs
securerag/benchmarks/: __init__.py  loaders.py  nq.py  trivia.py
securerag/llm/: __init__.py  base.py  fallback.py  roles.py
securerag/llm/adapters/: __init__.py  anthropic.py  huggingface.py  langchain.py  litellm.py  llamaindex.py  ollama.py  openai.py
securerag/proto/: __init__.py  secure_retrieval.proto  secure_retrieval_pb2.py  secure_retrieval_pb2_grpc.py
tests/: test_benchmarks_wiring.py  test_dp_researcher_ergonomics.py  test_mvp.py  test_privacy_context_gaps.py  test_refactor_contract.py  test_required_budget_semantics.py
tutorials/notebooks/: 01_framework_basics.ipynb  02_backend_parity.ipynb  03_strict_grpc_api.ipynb  04_dp_researcher_ergonomics.ipynb  05_encrypted_search_researcher_guide.ipynb  06_cot_multi_round_ollama.ipynb  07_complete_secure_rag_multi_rounds_qwen.ipynb  08_protocol_comparison_multi_round_qwen.ipynb
