[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securerag"
version = "0.1.0"
description = "SecureRAG pseudo-remote MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "grpcio>=1.78.0",
  "protobuf>=5.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "grpcio-tools>=1.78.0"
]
rust = [
  "maturin>=1.6.0"
]

[tool.setuptools.packages.find]
include = ["securerag*"]
