[package]
name = "securerag_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "securerag_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
once_cell = "1.19"
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
hmac = "0.12"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[[bin]]
name = "securerag_grpc_server"
path = "src/bin/securerag_grpc_server.rs"

[features]
default = []
python-bridge = ["dep:pyo3"]
